[package]
name = "shirakami"
version = "0.1.0"
authors = ["ryoo14 <anana12185@gmail.com>"]
edition = "2018"
default-run = "shirakami"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shirakami"
path = "src/bin/main.rs"
doc = false

[dependencies]
regex = "^1.4.3"
anyhow = "^1.0.38"
exitcode = "^1.1.2"
